# rusty-finance

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: security.yml
src/: cli.rs  display.rs  display_patched.rs  lib.rs  main.rs  main.rs.bak
src/calculations/: interest.rs  investment.rs  loan.rs  mod.rs  ratios.rs  statistics.rs
