[package]
name = "rusty-finance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive"] }
prettytable-rs = "0.10.0"
rust_decimal = "1.29.1"
serde = "1.0.163"
